Details
-
Bug
-
Resolution: Done
-
P0: Blocker
-
Qt Creator 2.1.0-rc1
-
None
-
f1a403c778fec44d55dd383e44b620ca1f6483c1 fabaffde4f83923e5a52d13a0abfdfd38d9d2d34
Description
Some time ago, I filed task QTSDK-194 about missing libraries in the shipped S60 SDK. Nutshell: for orientation locking, the .pro file generated by the QtQuick/MobileApp wizards, add -leiksrv to LIBS. The Symbian^1 SDKs shipped with Nokia Qt SDK 1.0 and 1.1 have eiksrv.dso removed, however, so that the apps will not link.
Symbian^3 seems to ship eiksrv.dso (at least when the native support component is checked in the installer).
It seems that -leiksrv is not needed. When removing that, the app links fine.
P0: -leiksrv has to be removed from the template.