src/plugins/qt4projectmanager/wizards/abstractmobileapp.cpp
@@ -65,7 +65,7 @@ const QString AbstractMobileApp::ProFileComment(QLatin1String("#"));
 const QString AbstractMobileApp::DeploymentPriFileName(QLatin1String("deployment.pri"));
 const QString AbstractMobileApp::FileChecksum(QLatin1String("checksum"));
 const QString AbstractMobileApp::FileStubVersion(QLatin1String("version"));
-const int AbstractMobileApp::StubVersion = 1;
+const int AbstractMobileApp::StubVersion = 2;
 
 AbstractMobileApp::AbstractMobileApp()
     : m_orientation(ScreenOrientationAuto), m_networkEnabled(false)
